maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:27: error: not found: value getIndications
			if (getIndications(i,j-1)==9999) {parcours(i,j-1,a)}
                            ^JediEscaper:32: error: not found: value getIndications
				if (getIndications(i-1,j)==9999){parcours(i-1,j,a)}
                                    ^JediEscaper:37: error: not found: value getIndications
					if (getIndications(i+1,j)==9999){parcours(i+1,j,a)}
                                            ^JediEscaper:40: error: not found: value setIndications
						setIndications(i,j+1,a+1)
                                                ^JediEscaper:42: error: not found: value getIndications
						if (getIndications(i,j+1)==9999){parcours(i,j+1,a)}
                                                    ^